--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 
 	<properties>
 		<jdk.version>1.7</jdk.version>
-		<spring.version>3.2.3.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<logback.version>1.0.13</logback.version>
 		<jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
-		<hibernate-core-version></hibernate-core-version>
+		<spring.version>3.2.3.RELEASE</spring.version>
+		<hibernate.version>4.2.3.Final</hibernate.version>
 	</properties>
 	<dependencies>
 		<!-- MYSQL Driver -->
@@ -28,14 +28,14 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.3.8.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 
 		<!-- for JPA, use hibernate-entitymanager instead of hibernate-core -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.8.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 
 		<!-- Junit -->
@@ -91,12 +91,12 @@
 		</dependency>
 
 		<!-- Support for Ehcache and others -->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-ehcache</artifactId>
-			<version>4.3.8.Final</version>
-		</dependency>
-
+		 <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-ehcache</artifactId>
+         <version>4.3.8.Final</version>
+       </dependency>
+		
 		<dependency>
 			<groupId>backport-util-concurrent</groupId>
 			<artifactId>backport-util-concurrent</artifactId>
@@ -173,10 +173,6 @@
 				<exclusion>
 					<groupId>org.springframework</groupId>
 					<artifactId>spring-context-support</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-tx</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
